--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>dreamsplus_cicd</name>
-  <url>http://maven.apache.org</url>
+  <url>https://mirrors.estointernet.in/apache/tomcat/tomcat-8/v8.5.69/bin/apache-tomcat-8.5.69.zip</url>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
